# rust-slint-todolist-demo

./: .gitignore  Cargo.toml  README.md
src/: functions_lib.rs  main.rs
ui/: appwindow.slint  global.slint
ui/components/: form-panel.slint  item-panel.slint  list-item-panel.slint
